--- a/thymeleaf/blog/src/main/resources/application.properties
+++ b/thymeleaf/blog/src/main/resources/application.properties
@@ -20,7 +20,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 # jpa/hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+# ------------- Spring Configuration -------------
+server.port=8080
