--- a/thymeleaf/security/src/main/resources/application.properties
+++ b/thymeleaf/security/src/main/resources/application.properties
@@ -1,2 +1,15 @@
-# ------------- Spring Configuration -------------
+# ------------- Thymeleaf Configuration -------------
+spring.thymeleaf.cache=false
+#spring.thymeleaf.check-template=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.servlet.content-type=text/html
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+# ------------- Server Configuration -------------
+# configure the whitelabel error
+server.error.whitelabel.enabled=false
+# change the server default port
 server.port=9090
