database auth added

--- a/thymeleaf/security/src/main/resources/application.properties
+++ b/thymeleaf/security/src/main/resources/application.properties
@@ -1,4 +1,41 @@
-# ------------- Thymeleaf Configuration -------------
+# ==============================================================
+# = H2
+# ==============================================================
+# To See H2 Console in Browser:
+# http://localhost:9090/h2-console
+# Enabling H2 Console
+spring.h2.console.enabled=true
+# ==============================================================
+# = Data Source
+# ==============================================================
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+# ==============================================================
+# = Initialize the database using data.sql script
+# ==============================================================
+spring.datasource.initialization-mode=always
+# ==============================================================
+# = Keep the connection alive if idle for a long time (needed in production)
+# ==============================================================
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validation-query=SELECT 1
+# ==============================================================
+# = JPA/Hibernate
+# ==============================================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+# ==============================================================
+# = Thymeleaf
+# ==============================================================
 spring.thymeleaf.cache=false
 #spring.thymeleaf.check-template=true
 #spring.thymeleaf.check-template-location=true
@@ -8,7 +45,9 @@ spring.thymeleaf.cache=false
 #spring.thymeleaf.mode=HTML
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
-# ------------- Server Configuration -------------
+# ==============================================================
+# = Server
+# ==============================================================
 # configure the whitelabel error
 server.error.whitelabel.enabled=false
 # change the server default port
