--- a/thymeleaf/blog/src/main/resources/application.properties
+++ b/thymeleaf/blog/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
 # datasource
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:blog
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
