--- a/thymeleaf/security/src/main/resources/application.properties
+++ b/thymeleaf/security/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 # http://localhost:9090/h2-console
 # Enabling H2 Console
 spring.h2.console.enabled=true
+
 # ==============================================================
 # = Data Source
 # ==============================================================
@@ -45,6 +46,11 @@ spring.thymeleaf.cache=false
 #spring.thymeleaf.mode=HTML
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
+# ==============================================================
+# = Server
+# ==============================================================
+logging.level.org.springframework.security=DEBUG
+
 # ==============================================================
 # = Server
 # ==============================================================
