--- a/thymeleaf/security/src/main/resources/application.properties
+++ b/thymeleaf/security/src/main/resources/application.properties
@@ -29,11 +29,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
 # ==============================================================
 # = Thymeleaf
 # ==============================================================
@@ -58,3 +54,13 @@ logging.level.org.springframework.security=DEBUG
 server.error.whitelabel.enabled=false
 # change the server default port
 server.port=9090
+## ==============================================================
+## = Spring Security / Queries for AuthenticationManagerBuilder
+## ==============================================================
+#spring.queries.users-query=select email, password, active from user where email=?
+#spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+#@Value("${spring.queries.users-query}")
+#private String usersQuery;
+#
+#@Value("${spring.queries.roles-query}")
+#private String rolesQuery;
